--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -37,12 +37,13 @@
       function run() {
         base = 'https://target.georgetian.com/';
         resources = [
-          'text.txt',
+          //'text.txt',
           'audio',
-          'frame',
-          'iframe',
+          //'frame',
+          //'iframe',
           'img',
-          'script',
+          //'script',
+          'video',
         ];
         small = 2;
         sizes = [
