--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -43,7 +43,7 @@
           //'iframe',
           'img',
           //'script',
-          'video',
+          //'video',
         ];
         small = 2;
         sizes = [
@@ -61,7 +61,7 @@
           //'script',
           //'source',
           //'track',
-          'video',
+          //'video',
         ];
 
         let wait = 1000;
