--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -16,7 +16,7 @@
 
       function show(element, url, size, event, diff) {
         document.getElementById('tbody').innerHTML += `<tr><td>${element}</td><td>${url}</td><td>${size}</td><td>${event}</td><td>${diff}</td><tr>`;
-        console.log(performance.getEntries());
+        //console.log(performance.getEntries());
       }
 
       function get(element, url, size) {
