--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -6,10 +6,7 @@
 
       if ("serviceWorker" in navigator) {
 				addEventListener("load", async () => {
-					performance.setResourceTimingBufferSize(1000000);
-					const registration = await navigator.serviceWorker.register("serviceworker.js");
-					if (registration.installing)
-						location.reload();
+					await navigator.serviceWorker.register("serviceworker.js");
 				});
 			}
 
