--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -9,7 +9,7 @@
 					await navigator.serviceWorker.register('serviceworker.js');
 				});
 			} else {
-        console.log('Browser does not support Service Workers');
+        document.body.innerHTML += ('Browser does not support Service Workers');
       }
 
 
