--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -42,7 +42,7 @@
           13369,
         ];
 
-        elements = resources.array.forEach(element => {
+        elements = resources.forEach(element => {
           element.split('.')[0];
         });
 
