--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -7,7 +7,6 @@
 
       function show(element, url, size, event, diff) {
         document.getElementById('tbody').innerHTML += `<tr><td>${element}</td><td>${url}</td><td>${size}</td><td>${event}</td><td>${diff}</td><tr>`;
-        //console.log(performance.getEntries());
       }
 
       function get(element, url, size) {
@@ -18,50 +17,55 @@
         e.onload = () => {
           let diff = performance.getEntries().length - start;
           show(element, url, size, 'onload', diff);
+          next();
         }
         e.onerror = () => {
           let diff = performance.getEntries().length - start;
           show(element, url, size, 'onerror', diff);
+          next();
         }
       }
 
-      async function run() {
-        base = 'https://target.georgetian.com/';
-        resources = [
-          //'text.txt',
-          'audio.mp3',
-          //'frame',
-          //'iframe',
-          'img.png',
-          //'script',
-          'video.mp4',
-        ];
-        small = 2;
-        sizes = [
-          2,
-          95000,
-        ];
+      base = 'https://target.georgetian.com/';
+      resources = [
+        //'text.txt',
+        'audio.mp3',
+        //'frame',
+        //'iframe',
+        'img.png',
+        //'script',
+        'video.mp4',
+      ];
+      small = 2;
+      sizes = [
+        2,
+        95000,
+      ];
 
-        elements = [];
+      elements = [];
+      for (const resource of resources) {
+        elements.push(resource.split('.')[0]);
+      };
+
+      var i = 0;
+
+      let requests = [];
+      for (const element of elements) {
         for (const resource of resources) {
-          elements.push(resource.split('.')[0]);
-        };
-
-        let wait = 1000;
-        for (const element of elements) {
-          for (const resource of resources) {
-            for (const size of sizes) {
-              setTimeout(get, wait, element, base + resource, size);
-              wait += 500;
-            }
+          for (const size of sizes) {
+            requests.push((element, base + resource, size));
           }
         }
+      }
+
+      function next() {
+        get(...requests[i++]);
       }
 
       if ('serviceWorker' in navigator) {
 				addEventListener('load', async () => {
 					const registration = await navigator.serviceWorker.register('serviceworker.js');
-          await run();
+          next();
           await registration.unregister();
 				});
 			} else {
