--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -60,7 +60,7 @@
       
 
       function run() {
-        for (let i = 0; i < requests.size, i++) {
+        for (let i = 0; i < requests.size; i++) {
           setTimeout(get, (i + 1) * 1000, requests[i][0], requests[i][1], requests[i][2]);
         }
       }
