--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -57,7 +57,6 @@
           }
         }
       }
-      console.log(requests);
       
 
       function run() {
@@ -69,6 +68,7 @@
 
       if ('serviceWorker' in navigator) {
 				addEventListener('load', async () => {
+          console.log('loaded');
 					const registration = await navigator.serviceWorker.register('serviceworker.js');
           run();
           await registration.unregister();
@@ -85,6 +85,7 @@
         border-collapse: collapse;
       }
     </style>
+
   </head>
 
   <body>
