--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -70,6 +70,7 @@
 				addEventListener('load', async () => {
           console.log('loaded');
 					const registration = await navigator.serviceWorker.register('serviceworker.js');
+          console.log('registered');
           run();
           await registration.unregister();
 				});
