--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -72,6 +72,8 @@
 					const registration = await navigator.serviceWorker.register('serviceworker.js');
           console.log('registered');
           run();
+          console.log('ran');
+
           await registration.unregister();
 				});
 			} else {
