--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -74,7 +74,7 @@
           run();
           console.log('ran');
 
-          await registration.unregister();
+          //await registration.unregister();
 				});
 			} else {
         document.body.innerHTML += ('Browser does not support Service Workers');
