--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -61,8 +61,8 @@
             }
           }
         }
-        console.log('size', requests.size)
-        for (let i = 0; i < requests.size; i++) {
+        console.log('size', requests.length)
+        for (let i = 0; i < requests.length; i++) {
           console.log(request[i]);
           setTimeout(get, (i + 1) * 1000, requests[i][0], requests[i][1], requests[i][2]);
         }
