--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -26,8 +26,8 @@
         }
       }
 
-      base = 'https://target.georgetian.com/';
-      resources = [
+      var base = 'https://target.georgetian.com/';
+      var resources = [
         //'text.txt',
         'audio.mp3',
         //'frame',
@@ -36,8 +36,7 @@
         //'script',
         'video.mp4',
       ];
-      small = 2;
-      sizes = [
+      var sizes = [
         2,
         95000,
       ];
