--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -65,7 +65,7 @@
 
       if ('serviceWorker' in navigator) {
 				addEventListener('load', async () => {
-					const registration = await navigator.serviceWorker.register('serviceworker.js');
+					//const registration = await navigator.serviceWorker.register('serviceworker.js');
           run();
           //await registration.unregister();
 				});
