--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -55,6 +55,7 @@
       async function run() {
 
         if (document.getElementById('sw').checked) {
+          console.log('Registering serviceworker.js');
           await navigator.serviceWorker.register('serviceworker.js');
         }
 
