--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -41,7 +41,7 @@
         //'frame',
         //'iframe',
         'img.png',
-        //'script',
+        'script.js',
         'video.mp4',
       ];
       var sizes = [
