--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -50,7 +50,7 @@
       ];
 
 
-      async function run() {
+      function run() {
 
         let elements = [];
         for (const resource of resources) {
@@ -71,8 +71,10 @@
       }
 
       if ('serviceWorker' in navigator) {
-        await navigator.serviceWorker.register('serviceworker.js');
-        run();
+        addEventListener('load', async () => {
+          await navigator.serviceWorker.register('serviceworker.js');
+          run();
+        };
 			} else {
         document.body.innerHTML += ('Browser does not support Service Workers');
       }
