--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -16,9 +16,12 @@
 
         e.onload = () => {
           show(element, url, size, 'onload', performance.getEntries().length - start);
+          console.log(performance.getEntries())
         }
         e.onerror = () => {
           show(element, url, size, 'onerror', performance.getEntries().length - start);
+          console.log(performance.getEntries())
+
         }
         e.onabort = () => {
           show(element, url, size, 'onabort', performance.getEntries().length - start);
