--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -79,7 +79,7 @@
           run();
         });
 			} else {
-        document.body.innerHTML += ('Browser does not support Service Workers');
+        //document.body.innerHTML += ('Browser does not support Service Workers');
       }
 
     </script>
