--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -42,7 +42,7 @@
         //'text.txt',
         'audio.mp3',
         //'frame',
-        //'iframe',
+        'iframe',
         'img.png',
         //'script.js',
         'video.mp4',
