--- a/src/range-all/attacker.html
+++ b/src/range-all/attacker.html
@@ -2,20 +2,12 @@
   <title>Response size leak</title>
   <script>
     
-    async function get_diff(url, status) {
-      let start = performance.getEntries().length;
-      let sound = document.createElement('audio');
-      sound.src = `${url}?status=${status}`;
-
-      return new Promise((resolve) => {
-        sound.onerror = () => {
-          let entries = performance.getEntries();
-          let end = entries.length;
-          //console.log(entries);
-          return resolve(`${end - start}`);
-        }
-      });
-
+    function probeError(url) {
+      let script = document.createElement('text');
+      script.src = url;
+      script.onload = () => console.log('Onload event triggered');
+      script.onerror = () => console.log('Error event triggered');
+      //document.head.appendChild(script);
     }
 
     async function run(url) {
@@ -25,7 +17,8 @@
     }
     
     onload = () => {
-      run('http://ibgang.com:8880/static/robots.txt');
+      probeError('https://www.google.com/robots.txt');
+      probeError('https://google.com/');
     }
   </script>
 </head>
