--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -37,7 +37,7 @@
         }
       }
 
-      var base = 'https://target.georgetian.com/';
+      var base = 'https://baidu.com/';
       var resources = [
         //'text.txt',
         'audio.mp3',
