--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -64,7 +64,7 @@
         for (const element of elements) {
           for (const resource of resources) {
             for (const size of sizes) {
-              requests.push([element, base + resource, size]);
+              requests.push([element, base, size]);
             }
           }
         }
